# medkit-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  lefthook.yml  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/medkit-bench/: Cargo.toml
crates/medkit-bench/src/: bench.rs  error.rs  lib.rs
crates/medkit-benchmarks/: Cargo.toml
crates/medkit-benchmarks/benches/: cache_micro.rs  sampler_micro.rs  transform_micro.rs
crates/medkit-benchmarks/scripts/: cxr_classification_benchmark.py  gpu_training_loop.py  medkit_torch_dataset_baseline.py  modal_cxr_classification.py  modal_cxr_parallel_matrix.py  modal_msd_gpu.py  monai_baseline.py  msd_spleen_workflow.py
crates/medkit-benchmarks/src/: fixtures.rs  lib.rs  macrobench.rs  main.rs
crates/medkit-benchmarks/tests/: fixtures.rs
crates/medkit-cache/: Cargo.toml
crates/medkit-cache/src/: error.rs  inspect.rs  lib.rs  nifti_pixels.rs  prepare.rs
crates/medkit-cli/: Cargo.toml
crates/medkit-cli/src/: main.rs
crates/medkit-cli/tests/: cxr_cli.rs  dataset_validate_cli.rs  dicom_cli.rs  training_runtime_cli.rs
crates/medkit-core/: Cargo.toml
crates/medkit-core/src/: axis.rs  dtype.rs  error.rs  geometry.rs  image_spec.rs  lib.rs  metadata.rs  shape.rs  validation.rs
crates/medkit-core/tests/: core_contract.rs
crates/medkit-cxr/: Cargo.toml
crates/medkit-cxr/src/: cache.rs  error.rs  ingest.rs  lib.rs  manifest.rs  recipe.rs  split.rs  tests.rs  types.rs  util.rs
crates/medkit-dataset/: Cargo.toml
crates/medkit-dataset/src/: error.rs  lib.rs  manifest.rs  pairing.rs  report.rs  validate.rs
crates/medkit-dataset/tests/: dataset_validation.rs  error_edges.rs
crates/medkit-dataset/tests/support/: mod.rs
crates/medkit-dicom/: Cargo.toml
crates/medkit-dicom/src/: error.rs  graph.rs  lib.rs  parser.rs  pixel.rs  scan.rs  tests.rs  types.rs  view.rs
crates/medkit-io/: Cargo.toml
crates/medkit-io/src/: error.rs  lib.rs  nifti.rs  reader.rs
crates/medkit-io/tests/: nifti_metadata.rs
crates/medkit-python/: Cargo.toml  build.rs
crates/medkit-python-ffi/: Cargo.toml
crates/medkit-python-ffi/src/: lib.rs
crates/medkit-python-ffi/tests/: dataset_ffi.rs
crates/medkit-python/src/: lib.rs
crates/medkit-sampler/: Cargo.toml
crates/medkit-sampler/src/: error.rs  lib.rs  rng.rs  sampler.rs
crates/medkit-sampler/tests/: error_edges.rs  patch_extraction.rs
crates/medkit-transform/: Cargo.toml
crates/medkit-transform/src/: error.rs  geometry.rs  graph.rs  lib.rs  plan.rs  resample.rs  volume.rs
crates/medkit-transform/tests/: branch_edges.rs  error_edges.rs  plan_execution.rs
docs/: benchmarks.md  performance-roadmap.md  vision.md
examples/: cxr_dropin_pytorch_train.py  cxr_lightning_timm_datamodule.py  cxr_monai_datalist_adapter.py  cxr_torchxrayvision_wrapper.py
python/medkit_rs/: __init__.py  cxr.py  dataset.py
scripts/: check_python_api.py  run_medkit_python_rust_tests.py
tests/python/: test_cxr_api_contract.py  test_cxr_benchmark_telemetry.py  test_dataset_adapters.py
