[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "medkit-rs"
version = "0.1.0a1"
description = "Rust-first medical imaging data loading and training utilities."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ali Ihsan Nergiz", email = "aihsannergiz@gmail.com" },
]
maintainers = [
    { name = "Ali Ihsan Nergiz", email = "aihsannergiz@gmail.com" },
]
keywords = [
    "medical-imaging",
    "machine-learning",
    "dicom",
    "nifti",
    "rust",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
torch = [
    "torch",
]

[project.urls]
Homepage = "https://ainergiz.com"
Repository = "https://github.com/ainergiz/medkit-rs"
Issues = "https://github.com/ainergiz/medkit-rs/issues"

[dependency-groups]
dev = [
    "maturin>=1.7,<2",
    "numpy>=1.26",
    "pytest>=8",
]

[tool.maturin]
manifest-path = "crates/medkit-python/Cargo.toml"
python-source = "python"
module-name = "medkit_rs._native"
features = ["extension-module"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
pythonpath = ["python"]
testpaths = ["tests/python"]
markers = [
    "cxr_fixture: requires a CLI-produced CXR cache fixture",
]

[tool.coverage.run]
branch = true
source = ["python/medkit_rs"]

[tool.coverage.report]
fail_under = 100
precision = 2
show_missing = true
