[package]
name = "medkit-bench"
version = "0.1.0"
description = "Training data cache benchmarking for medkit-rs."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "medkit_bench"
path = "src/lib.rs"

[dependencies]
medkit-sampler = { path = "../medkit-sampler" }
serde.workspace = true
serde_json.workspace = true

