[package]
name = "medkit-cache"
version = "0.1.0"
description = "Content-addressed preprocessing cache for medkit-rs training data."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "medkit_cache"
path = "src/lib.rs"

[dependencies]
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
medkit-dataset = { path = "../medkit-dataset" }
medkit-transform = { path = "../medkit-transform" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

