[package]
name = "medkit-cli"
version = "0.1.1"
description = "Command-line workflows for medkit-rs."
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "medkit"
path = "src/main.rs"

[features]
default = []
dicom-rs-codecs = ["medkit-cxr/dicom-rs-codecs", "medkit-dicom/dicom-rs-codecs"]

[dependencies]
medkit-bench = { path = "../medkit-bench" }
medkit-cache = { path = "../medkit-cache" }
medkit-cxr = { path = "../medkit-cxr" }
medkit-dataset = { path = "../medkit-dataset" }
medkit-dicom = { path = "../medkit-dicom" }
medkit-sampler = { path = "../medkit-sampler" }
serde_json.workspace = true

[dev-dependencies]
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
image.workspace = true
