[package]
name = "medkit-core"
version = "0.1.0"
description = "Core geometry and metadata types for medkit-rs."
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "medkit_core"
path = "src/lib.rs"

[dependencies]
