[package]
name = "medkit-cxr"
version = "0.1.0"
description = "Chest X-ray manifest, validation, split, and cache utilities for medkit-rs."
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "medkit_cxr"
path = "src/lib.rs"

[features]
default = []
dicom-rs-codecs = ["medkit-dicom/dicom-rs-codecs"]

[dependencies]
csv.workspace = true
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
image.workspace = true
medkit-dicom = { path = "../medkit-dicom" }
memmap2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
