[package]
name = "medkit-dicom"
version = "0.1.0"
description = "DICOM metadata parsing and pixel presentation utilities for medkit-rs."
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
dicom-rs-codecs = ["dep:dicom-object", "dep:dicom-pixeldata", "dicom-pixeldata/native"]

[dependencies]
dicom-object = { version = "0.9.1", optional = true }
dicom-pixeldata = { version = "0.9.1", default-features = false, optional = true }
image.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
