[package]
name = "medkit-python-ffi"
version = "0.1.1"
description = "C ABI batch extraction bridge for medkit-rs Python DataLoader adapters."
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "medkit_python_ffi"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
medkit-cache = { path = "../medkit-cache" }
memmap2 = "0.9"
rayon = "1.10"
serde.workspace = true
serde_json.workspace = true
