[package]
name = "medkit-sampler"
version = "0.1.0"
description = "Deterministic patch sampling from medkit-rs caches."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "medkit_sampler"
path = "src/lib.rs"

[dependencies]
medkit-cache = { path = "../medkit-cache" }
medkit-transform = { path = "../medkit-transform" }
memmap2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
